Support for platforms other than basalt

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,10 @@ jobs:
         with:
           flakes-from-devshell: true
           script: |
-            yes | pebble sdk install 4.3
-            pebble build --sdk=4.3
+            yes | pebble build
       - name: Upload build
         uses: actions/upload-artifact@v4
         with:
           name: pebble-app
           path: build/PebbleTimeGear.pbw
+          if-no-files-found: error
